[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/tiles/moon_tileset.png" type="Texture" id=1]
[ext_resource path="res://entities/Alien.tscn" type="PackedScene" id=2]
[ext_resource path="res://environ/PlayerCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/tiles/barrier.png" type="Texture" id=4]
[ext_resource path="res://ui/GameUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://sound/whistle.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/background/background0.png" type="Texture" id=7]
[ext_resource path="res://scenes/Game.gd" type="Script" id=8]
[ext_resource path="res://environ/PlantSpawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/background/background1.png" type="Texture" id=10]
[ext_resource path="res://assets/background/background2.png" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=1]
1/name = "barrier.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "moon_tileset.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 96, 32, 96 )
2/tile_mode = 1
2/autotile/bitmask_mode = 1
2/autotile/bitmask_flags = [ Vector2( 0, 0 ), 23593104, Vector2( 0, 1 ), 32309266, Vector2( 0, 2 ), 63, Vector2( 1, 0 ), 23593104 ]
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 32, 32 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "moon_tileset.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 192, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 512, 512 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 512, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -15 )
texture = ExtResource( 7 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 1 )
motion_mirroring = Vector2( 512, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 0, -9 )
texture = ExtResource( 10 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -18, 2, 1, -17, 2, 1, -16, 2, 1, -15, 2, 0, -14, 2, 1, -13, 2, 0, -12, 2, 1, -11, 2, 1, -10, 2, 1, -9, 2, 0, -8, 2, 0, -7, 2, 1, -6, 2, 0, -5, 2, 1, -4, 2, 1, -3, 2, 1, -2, 2, 1, -1, 2, 1, -65536, 2, 1, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 1, -65530, 2, 1, -65529, 2, 0, -65528, 2, 1, -65527, 2, 1, -65526, 2, 0, -65525, 2, 0, -65524, 2, 1, -65523, 2, 1, -65522, 2, 1, -65521, 2, 1, -65520, 2, 1, 65505, 0, 0, 65506, 0, 0, 65507, 0, 0, 65508, 0, 0, 65509, 0, 0, 65510, 0, 0, 65511, 0, 0, 65512, 0, 0, 65513, 0, 0, 65514, 0, 0, 65515, 0, 0, 65516, 0, 0, 65517, 0, 0, 65518, 2, 65536, 65519, 2, 65536, 65520, 2, 65536, 65521, 2, 65536, 65522, 2, 65536, 65523, 2, 65536, 65524, 2, 65536, 65525, 2, 65536, 65526, 2, 65536, 65527, 2, 65536, 65528, 2, 65536, 65529, 2, 65536, 65530, 2, 65536, 65531, 2, 65536, 65532, 2, 65536, 65533, 2, 65536, 65534, 2, 65536, 65535, 2, 65536, 0, 2, 65536, 1, 2, 65536, 2, 2, 65536, 3, 2, 65536, 4, 2, 65536, 5, 2, 65536, 6, 2, 65536, 7, 2, 65536, 8, 2, 65536, 9, 2, 65536, 10, 2, 65536, 11, 2, 65536, 12, 2, 65536, 13, 2, 65536, 14, 2, 65536, 15, 2, 65536, 16, 2, 65536, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 131041, 0, 65536, 131042, 0, 65536, 131043, 0, 65536, 131044, 0, 65536, 131045, 0, 65536, 131046, 0, 65536, 131047, 0, 65536, 131048, 0, 65536, 131049, 0, 65536, 131050, 0, 65536, 131051, 0, 65536, 131052, 0, 65536, 131053, 0, 65536, 131054, 3, 0, 131055, 3, 0, 131056, 3, 0, 131057, 3, 0, 131058, 3, 0, 131059, 3, 0, 131060, 3, 0, 131061, 3, 0, 131062, 3, 0, 131063, 3, 0, 131064, 3, 0, 131065, 3, 0, 131066, 3, 0, 131067, 3, 0, 131068, 3, 0, 131069, 3, 0, 131070, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 0, 65536, 65554, 0, 65536, 65555, 0, 65536, 65556, 0, 65536, 65557, 0, 65536, 65558, 0, 65536, 65559, 0, 65536, 65560, 0, 65536, 65561, 0, 65536, 65562, 0, 65536, 65563, 0, 65536, 196577, 0, 65536, 196578, 0, 65536, 196579, 0, 65536, 196580, 0, 65536, 196581, 0, 65536, 196582, 0, 65536, 196583, 0, 65536, 196584, 0, 65536, 196585, 0, 65536, 196586, 0, 65536, 196587, 0, 65536, 196588, 0, 65536, 196589, 0, 65536, 196590, 3, 0, 196591, 3, 0, 196592, 3, 0, 196593, 3, 0, 196594, 3, 0, 196595, 3, 0, 196596, 3, 0, 196597, 3, 0, 196598, 3, 0, 196599, 3, 0, 196600, 3, 0, 196601, 3, 0, 196602, 3, 0, 196603, 3, 0, 196604, 3, 0, 196605, 3, 0, 196606, 3, 0, 196607, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 0, 65536, 131090, 0, 65536, 131091, 0, 65536, 131092, 0, 65536, 131093, 0, 65536, 131094, 0, 65536, 131095, 0, 65536, 131096, 0, 65536, 131097, 0, 65536, 131098, 0, 65536, 131099, 0, 65536, 262126, 3, 0, 262127, 3, 0, 262128, 3, 0, 262129, 3, 0, 262130, 3, 0, 262131, 3, 0, 262132, 3, 0, 262133, 3, 0, 262134, 3, 0, 262135, 3, 0, 262136, 3, 0, 262137, 3, 0, 262138, 3, 0, 262139, 3, 0, 262140, 3, 0, 262141, 3, 0, 262142, 3, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Barriers" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -131083, 1, 0, -196598, 1, 0, -65547, 1, 0, -131062, 1, 0, -18, 2, 1, -17, 2, 1, -16, 2, 1, -15, 2, 0, -14, 2, 1, -13, 2, 0, -12, 2, 1, -11, 1, 0, -9, 2, 0, -8, 2, 0, -7, 2, 1, -6, 2, 0, -5, 2, 1, -4, 2, 1, -3, 2, 1, -2, 2, 1, -1, 2, 1, -65536, 2, 1, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 1, -65530, 2, 1, -65529, 2, 0, -65528, 2, 1, -65527, 2, 1, -65526, 1, 0, -65525, 2, 0, -65524, 2, 1, -65523, 2, 1, -65522, 2, 1, -65521, 2, 1, -65520, 2, 1, 65505, 0, 0, 65506, 0, 0, 65507, 0, 0, 65508, 0, 0, 65509, 0, 0, 65510, 0, 0, 65511, 0, 0, 65512, 0, 0, 65513, 0, 0, 65514, 0, 0, 65515, 0, 0, 65516, 0, 0, 65517, 0, 0, 65518, 2, 65536, 65519, 2, 65536, 65520, 2, 65536, 65521, 2, 65536, 65522, 2, 65536, 65523, 2, 65536, 65524, 2, 65536, 65525, 2, 65536, 65526, 2, 65536, 65527, 2, 65536, 65528, 2, 65536, 65529, 2, 65536, 65530, 2, 65536, 65531, 2, 65536, 65532, 2, 65536, 65533, 2, 65536, 65534, 2, 65536, 65535, 2, 65536, 0, 2, 65536, 1, 2, 65536, 2, 2, 65536, 3, 2, 65536, 4, 2, 65536, 5, 2, 65536, 6, 2, 65536, 7, 2, 65536, 8, 2, 65536, 9, 2, 65536, 10, 2, 65536, 11, 2, 65536, 12, 2, 65536, 13, 2, 65536, 14, 2, 65536, 15, 2, 65536, 16, 2, 65536, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 131041, 0, 65536, 131042, 0, 65536, 131043, 0, 65536, 131044, 0, 65536, 131045, 0, 65536, 131046, 0, 65536, 131047, 0, 65536, 131048, 0, 65536, 131049, 0, 65536, 131050, 0, 65536, 131051, 0, 65536, 131052, 0, 65536, 131053, 0, 65536, 131054, 3, 0, 131055, 3, 0, 131056, 3, 0, 131057, 3, 0, 131058, 3, 0, 131059, 3, 0, 131060, 3, 0, 131061, 3, 0, 131062, 3, 0, 131063, 3, 0, 131064, 3, 0, 131065, 3, 0, 131066, 3, 0, 131067, 3, 0, 131068, 3, 0, 131069, 3, 0, 131070, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 0, 65536, 65554, 0, 65536, 65555, 0, 65536, 65556, 0, 65536, 65557, 0, 65536, 65558, 0, 65536, 65559, 0, 65536, 65560, 0, 65536, 65561, 0, 65536, 65562, 0, 65536, 65563, 0, 65536, 196577, 0, 65536, 196578, 0, 65536, 196579, 0, 65536, 196580, 0, 65536, 196581, 0, 65536, 196582, 0, 65536, 196583, 0, 65536, 196584, 0, 65536, 196585, 0, 65536, 196586, 0, 65536, 196587, 0, 65536, 196588, 0, 65536, 196589, 0, 65536, 196590, 3, 0, 196591, 3, 0, 196592, 3, 0, 196593, 3, 0, 196594, 3, 0, 196595, 3, 0, 196596, 3, 0, 196597, 3, 0, 196598, 3, 0, 196599, 3, 0, 196600, 3, 0, 196601, 3, 0, 196602, 3, 0, 196603, 3, 0, 196604, 3, 0, 196605, 3, 0, 196606, 3, 0, 196607, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 0, 65536, 131090, 0, 65536, 131091, 0, 65536, 131092, 0, 65536, 131093, 0, 65536, 131094, 0, 65536, 131095, 0, 65536, 131096, 0, 65536, 131097, 0, 65536, 131098, 0, 65536, 131099, 0, 65536, 262126, 3, 0, 262127, 3, 0, 262128, 3, 0, 262129, 3, 0, 262130, 3, 0, 262131, 3, 0, 262132, 3, 0, 262133, 3, 0, 262134, 3, 0, 262135, 3, 0, 262136, 3, 0, 262137, 3, 0, 262138, 3, 0, 262139, 3, 0, 262140, 3, 0, 262141, 3, 0, 262142, 3, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Alien" parent="." instance=ExtResource( 2 )]

[node name="Plants" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="ParticleRoot" type="Node2D" parent="." groups=["particle_root"]]
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerCamera" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -54 )
current = true
background_color = Color( 0.0196078, 0.027451, 0.0823529, 1 )
following_path = NodePath("../Alien")

[node name="GameTime" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="PlantSpawner" parent="." instance=ExtResource( 9 )]
plant_min_distance = 10.0

[node name="SpawnBoxCorner1" type="Position2D" parent="PlantSpawner"]
position = Vector2( 279, 0 )

[node name="SpawnBoxCorner2" type="Position2D" parent="PlantSpawner"]
position = Vector2( -293, 0 )

[node name="GameUI" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"
